feat(logout user): implement logout functionality
- create an endpoint for loging out a user
- create a cron job to auto delete expired tokens

[Delivers #174797521]
