# src/routes/auth/auth.js
@@ -5,11 +5,17 @@ import {
   signupValidations,
   loginValidation
 } from '../../middlewares/validations/userValidation';
+import AuthMiddleware from '../../middlewares/auth.middleware';
 
 const userRouter = new Router();
 
 userRouter
   .post('/signup', signupValidations, asyncHandler(UserController.signupUser))
-  .post('/login', loginValidation, asyncHandler(UserController.userLogin));
+  .post('/login', loginValidation, asyncHandler(UserController.userLogin))
+  .get(
+    '/logout',
+    AuthMiddleware.checkToken,
+    asyncHandler(UserController.userLogout)
+  );
 
 export default userRouter;
